--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -20,7 +20,7 @@
 <ul class="work-list">
   {% for work in work.children.all|dictsort:"csl_json.page" %}
     <li>
-      <a href="{% url "work-detail" work.slug %}">{{ work.title }}</a>
+      <a href="{% url "work-detail" work.slug %}">{{ work.title }}</a>, {{work.csl_json.page}}.
     </li>
   {% endfor %}
 </ul>
